fixed overflow in mobile

--- a/assets/css/experiencia-profesional/experiencia.css
+++ b/assets/css/experiencia-profesional/experiencia.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 0 8%;
+    overflow: hidden;
 }
 
 .experiencia-container__titulo {
